--- a/Copy to SD Card - MKS/config.ini
+++ b/Copy to SD Card - MKS/config.ini
@@ -145,17 +145,17 @@ status_screen:1
 ## Title background color
 title_background_color:1
 
-## Background color
-background_color:1
+## Menu background color
+menu_background_color:1
 
-## Font foreground color
-font_color:0
+## Menu font color
+menu_font_color:0
 
 ## Reminder font color, such as: "No print attached", "Busy processing", etc
-reminder_color:2
+reminder_font_color:2
 
-## Volume status/reminder font color, such as: "Card inserted", "Card removed"
-volume_status_color:5
+## Status (e.g. volume reminder, ABL probing point etc...) font color, such as: "Card inserted", "Card removed"
+status_font_color:5
 
 ## Backgroud color for X Y Z position display in Status Screen menu
 status_xyz_bg_color:15
@@ -205,8 +205,8 @@ files_sort_by:0
 #   Options: [disable: 0, enable: 1]
 files_list_mode:1
 
-#### Fan Speed As Percentage
-# Show fan speed as percentage. If disabled fan speeed will be displayed as PWM values.
+#### Fan Speed In Percentage
+# Show fan speed in percentage. If disabled fan speeed will be displayed as PWM values.
 #   Options: [disable: 0, enable: 1]
 fan_speed_percentage:1
 
@@ -237,7 +237,10 @@ notification_m117:0
 # It can be changed during print by pressing the hourglass icon.
 # At each click it will alter between the 3 variants.
 #
-# NOTE: If no remainig time info is present in the gCode file,
+# NOTE: Some slicers include time related info in the gCode files as comment. For those
+#       which doesn't and remainig time display is desired, a post processing plugin is
+#       needed that adds that info in the gCode file (comment or M73 Rxx format).
+#       If no remainig time info is present in the gCode file (comment or M73 Rxx),
 #       the display defaults to option 0.
 #
 #   Options: [Percentage & Elapsed time: 0, Percentage & Remaining time: 1, Elapsed time & Remaining time: 2]
@@ -297,7 +300,7 @@ marlin_background_color:1
 ## Marlin Mode font color
 marlin_font_color:8
 
-#### Marlin Mode Fullscreen Support
+#### Fullscreen Marlin Mode
 # Run Marlin Mode in fullscreen.
 #
 # NOTE: Disable is recommended for TFT24.
@@ -305,7 +308,7 @@ marlin_font_color:8
 #   Options: [disable: 0, enable: 1]
 marlin_fullscreen:1
 
-#### Marlin Mode Title Support
+#### Show Marlin Mode Title
 # Show banner text at the top of the TFT in Marlin Mode.
 #   Options: [disable: 0, enable: 1]
 marlin_show_title:1
@@ -319,15 +322,6 @@ marlin_title:Marlin Mode
 # Select Marlin Mode type.
 #   Options: [128x64 Full Graphic LCD: 0, 20x4 Character LCD: 1]
 marlin_type:0
-
-
-#--------------------------------------------------------------------
-# RRF Mode Settings
-#--------------------------------------------------------------------
-
-####
-#   Options: [Custom Menu (default): 0, RRF Macros Menu: 1]
-rrf_macros_on:0
 
 
 #--------------------------------------------------------------------
@@ -423,7 +417,7 @@ auto_load_leveling:1
 # On Marlin firmware, the TFT will auto-detect Onboard SD Card.
 # Auto-detect is not available for other firmwares like Smoothieware.
 #   Options: [disable: 0, enable: 1, auto-detect: 2]
-onboard_sd_support:2
+onboard_sd:2
 
 #### M27 Printing Status Refresh Time
 # M27 printing status refresh time (this will be used if SD_AUTOREPORT is not detected by the TFT).
@@ -440,7 +434,7 @@ M27_always_active:1
 # On Marlin firmware, the TFT will auto-detect Long File Name support.
 # Auto-detect is not available for other firmwares like Smoothieware.
 #   Options: [disable: 0, enable: 1, auto-detect: 2]
-long_filename_support:2
+long_filename:2
 
 #### Pause/Nozzle Park Settings
 # These settings are used when a print is paused or in any feature which requires moving/parking the nozzle
@@ -485,28 +479,28 @@ pause_feedrate:XY6000 Z6000 E600
 #   Value range: [min: 0, max: 2000]
 level_edge_distance:20
 
-## Leveling Z Position (Manual, Mesh Leveling, Probe/Home Offset, Mesh Tuner)
-# For manual leveling and MBL, lower Z axis to this absolute position after reaching a leveling point.
+## Leveling Z Position (Manual Leveling, Mesh Leveling, Probe/Home Offset, Mesh Tuner)
+# For Manual Leveling and MBL, lower Z axis to this absolute position after reaching a leveling point.
 # For Probe/Home Offset and ABL in Mesh Tuner, raise Z axis by this relative position after reaching a leveling point.
 #   Unit: [position in mm]
 #   Value range: [min: 0, max: 2000]
 level_z_pos:0.1
 
-## Leveling Z Raise (Manual, Mesh Leveling)
+## Leveling Z Raise (Manual Leveling, Mesh Leveling)
 # Raise Z axis by this relative value before moving to another point during leveling/probing procedures.
 #   Unit: [distance in mm]
 #   Value range: [min: 0, max: 2000]
 level_z_raise:10
 
-## Leveling Feed Rate (Manual, Mesh Leveling)
+## Leveling Feed Rate (Manual Leveling, Mesh Leveling)
 # Feedrate to use when moving an axis during leveling/probing procedures.
 #   Format: [level_feedrate: XY<feedrate> Z<feedrate>]
 #   Unit: [feedrate in mm/min]
 #   Value range: [min: 10, max: 12000]
 level_feedrate:XY6000 Z6000
 
-#### Inverted Axes (Manual Leveling, Move)
-# Invert axis button function in Manual Leveling and Move menus in order it matches the actual axis movement.
+#### Inverted Axes (Manual Leveling, Move, Probe Offset)
+# Used by Manual Leveling, Move and Probe Offset menus in order axis matches the actual axis movement.
 #
 # NOTE: The Y axis of different printer (move hotbed or move nozzle) move in different directions.
 #       So Y axis leveling invertion can't follow up inverted_axis[Y_AXIS].
@@ -516,7 +510,7 @@ level_feedrate:XY6000 Z6000
 #   Options: [disable: 0, enable: 1]
 inverted_axis:X0 Y0 Z0 LY0
 
-#### Probing After Homing (Probe Offset)
+#### Probing For Z Offset (Probe Offset)
 # Used by the Probe Offset menu for the Z offset tuning process.
 # If enabled, after homing a probing in the center of the bed is performed and then the nozzle
 # is moved to the XY probing point.
@@ -533,7 +527,7 @@ inverted_axis:X0 Y0 Z0 LY0
 #     homing (e.g. USE_PROBE_FOR_Z_HOMING enabled in Marlin firmware).
 #
 #   Options: [disable: 0, enable: 1]
-probing_after_homing:1
+probing_z_offset:1
 
 #### Probing Z Raise (Probe Offset, Mesh Editor)
 # Used by the Probe Offset / Mesh Editor menu for the Z offset / Z height tuning process.
@@ -563,44 +557,47 @@ z_steppers_alignment:1
 touchmi_sensor:0
 
 #### Preheat Temperatures
-#   Format: [preheat_nameX:<name>]
-#           [preheat_tempX:T<hotend temp> B<bed temp>]
+#   Format: [preheat_name_X:<name>]
+#           [preheat_temp_X:T<hotend temp> B<bed temp>]
 #   Unit: [temperature in °C]
 #   Value range: name:        [min: 3, max: 20 characters]
 #                hotend temp: [min: 20, max: 1000]
 #                bed temp:    [min: 20, max: 400]
-preheat_name1:PLA
-preheat_temp1:T200 B60
+preheat_name_1:PLA
+preheat_temp_1:T200 B60
 
-preheat_name2:PETG
-preheat_temp2:T240 B70
+preheat_name_2:PETG
+preheat_temp_2:T240 B70
 
-preheat_name3:ABS
-preheat_temp3:T230 B90
+preheat_name_3:ABS
+preheat_temp_3:T230 B90
 
-preheat_name4:WOOD
-preheat_temp4:T170 B50
+preheat_name_4:WOOD
+preheat_temp_4:T170 B50
 
-preheat_name5:TPU
-preheat_temp5:T220 B50
+preheat_name_5:TPU
+preheat_temp_5:T220 B50
 
-preheat_name6:NYLON
-preheat_temp6:T250 B90
+preheat_name_6:NYLON
+preheat_temp_6:T250 B90
 
 
 #--------------------------------------------------------------------
 # Power Supply Settings (only if connected to TFT controller)
 #--------------------------------------------------------------------
 
-#### Default Power Supply Mode
-# Enable auto shutdown when hotend temperature drops below target value.
-#   Options: [disable: 0, enable: 1, auto-detect: 2]
-ps_on:0
-
-#### Power Supply Active HIGH
-# Enable the logic of the mode on HIGH signal.
+#### Active HIGH Power Supply Logic
+# Used in case it is supported by the TFT.
+# The power supply uses this HIGH signal logic to stay ON.
+# The power supply uses the opposite of this logic to stay OFF.
 #   Options: [disable: 0, enable: 1]
 ps_active_high:1
+
+#### Default Power Supply Auto Shutdown Mode
+# Used in case it is supported by the TFT.
+# Enable power supply auto shutdown after a print is finished when hotend temperature drops below target value.
+#   Options: [disable: 0, enable: 1, auto-detect: 2]
+ps_auto_shutdown:0
 
 #### Power Supply Auto Shutdown Temperature
 # Maximum hotend temperature for automatic shutdown after printing, if automatic shutdown is enabled.
@@ -628,12 +625,12 @@ ps_auto_shutdown_temp:50
 fil_runout:1
 
 #### Inverted Filament Runout Sensor Logic
-# Invert the logic of the sensor.
+# The sensor uses an inverted logic.
 #   Options: [disable: 0, enable: 1]
 fil_runout_inverted:0
 
-#### Filament Runout Sensor NC (Normal Close)
-# Invert the logic of the sensor.
+#### NC (Normal Close) Filament Runout Sensor
+# The sensor is of type NC.
 #   Options: [Normal Open: 0, Normal Close: 1]
 fil_runout_nc:1
 
@@ -644,7 +641,8 @@ fil_runout_nc:1
 fil_runout_noise_threshold:200
 
 #### Smart Filament Runout Detection
-# For use with an encoder disc that toggles runout pin as filament moves.
+# Used in conjuction with an SFS (Smart Filamanent Sensor) based on an encoder disc that
+# toggles runout pin as filament moves.
 #   Unit: [distance in mm]
 #   Value range: [min: 1, max: 50]
 fil_runout_distance:7
@@ -658,18 +656,18 @@ fil_runout_distance:7
 # Enable power loss recovery.
 # Disable to reduce the loss of SD card or U disk.
 #   Options: [disable: 0, enable: 1]
-plr_on:1
+pl_recovery:1
 
 #### Power Loss Recovery Homing
 # Home before power loss recovery.
 #   Options: [disable: 0, enable: 1]
-plr_home:0
+pl_recovery_home:0
 
 #### Power Loss Recovery Z Raise
 # Raise Z axis on resume (on power loss with UPS).
 #   Unit: [distance in mm]
 #   Value range: [min: 0, max: 2000]
-plr_z_raise:10
+pl_recovery_z_raise:10
 
 #### BTT Mini UPS Support
 # Enable backup power/UPS to move Z axis on power loss.
@@ -804,15 +802,15 @@ custom_gcode_3:M84\n
 
 #### Default Start Gcode Status
 #   Options: [disable: 0, enable: 1]
-start_gcode_on:0
+start_gcode_enabled:0
 
 #### Default End Gcode Status
 #   Options: [disable: 0, enable: 1]
-end_gcode_on:0
+end_gcode_enabled:0
 
 #### Default Cancel Gcode Status
 #   Options: [disable: 0, enable: 1]
-cancel_gcode_on:1
+cancel_gcode_enabled:1
 
 #### Start Gcode
 # This gcode will runs before starting a print if `start_gcode_enabled` is enabled.
