--- a/Copy to SD Card root directory to update/Language Packs/language_cz.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_cz.ini
@@ -18,12 +18,12 @@ label_marlin_show_title:Zobrazit tytulek Marlin
 label_marlin_type:Typ Marlin Modu
 label_move_speed:Rychlost pohybu X Y Z
 label_auto_load_leveling:Automaticky Leveling
-label_probing_after_homing:Probing after homing
+label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Motor Auto-Alignment
-label_ps_on:Auto.vypnutí
+label_ps_auto_shutdown:Auto.vypnutí
 label_fil_runout:Senzor filamentu
-label_plr_on:Obnova po ztrátě napájení
-label_plr_home:Spuštění obnovení napájení
+label_pl_recovery:Obnova po ztrátě napájení
+label_pl_recovery_home:Spuštění obnovení napájení
 label_btt_mini_ups:Podpora BTT UPS
 label_touch_sound:Zvuk při dotyku
 label_toast_sound:Zvuk oznámení
@@ -35,9 +35,9 @@ label_lcd_idle_time:LCD snížení jasu po
 label_block_touch_on_idle:Blok. dotek při zatmavení
 label_knob_led_color:Rotační knob LED
 label_knob_led_idle:Rotační knob LED idle
-label_start_gcode_on:Spustit Gcode před tiskem
-label_end_gcode_on:Spustit Gcode po tisku
-label_cancel_gcode_on:Spustit Gcode po stornu
+label_start_gcode_enabled:Spustit Gcode před tiskem
+label_end_gcode_enabled:Spustit Gcode po tisku
+label_cancel_gcode_enabled:Spustit Gcode po stornu
 label_steps_setting:Kroků/mm
 label_filament_setting:Průměr Filamentu
 label_maxacceleration:Max zrychlení
