--- a/Copy to SD Card root directory to update/Language Packs/language_de.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_de.ini
@@ -18,12 +18,12 @@ label_marlin_show_title:Marlin Titel anz.
 label_marlin_type:Marlin Modus Typ
 label_move_speed:Geschwindigkeit (XYZ)
 label_auto_load_leveling:Auto Laden/Speichern Leveling
-label_probing_after_homing:Probing after homing
+label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Stepper Auto-Justierung
-label_ps_on:Auto-aus (PS_ON)
+label_ps_auto_shutdown:Auto-aus (PS_ON)
 label_fil_runout:Filament Sensor
-label_plr_on:Weitermachen (Stromausfall)
-label_plr_home:Achsen nullen (Stromausfall)
+label_pl_recovery:Weitermachen (Stromausfall)
+label_pl_recovery_home:Achsen nullen (Stromausfall)
 label_btt_mini_ups:BTT UPS Unterstützung
 label_touch_sound:Eingabetöne
 label_toast_sound:Toasts-Töne
@@ -35,9 +35,9 @@ label_lcd_idle_time:LCD-Timeout
 label_block_touch_on_idle:Kein Touch im Standby
 label_knob_led_color:Drehknopf LED Farbe
 label_knob_led_idle:Drehknopf LED idle Farbe
-label_start_gcode_on:Gcode vor Druck
-label_end_gcode_on:Gcode nach Druck
-label_cancel_gcode_on:Gcode bei Abbruch
+label_start_gcode_enabled:Gcode vor Druck
+label_end_gcode_enabled:Gcode nach Druck
+label_cancel_gcode_enabled:Gcode bei Abbruch
 label_steps_setting:Schritte pro mm
 label_filament_setting:Filament Durchmesser
 label_maxacceleration:max. Beschleunigung
