--- a/Copy to SD Card root directory to update/Language Packs/language_fr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_fr.ini
@@ -18,12 +18,12 @@ label_marlin_show_title:Titre en Mode Marlin
 label_marlin_type:Type du Mode Marlin
 label_move_speed:Vitesse de déplacement (X Y Z)
 label_auto_load_leveling:Auto-Sauvegarde Leveling
-label_probing_after_homing:Probing after homing
+label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Auto-Alignement moteurs Z
-label_ps_on:Extinction automatique
+label_ps_auto_shutdown:Extinction automatique
 label_fil_runout:Capteur de filament
-label_plr_on:Reprise après coupure
-label_plr_home:Home avant reprise
+label_pl_recovery:Reprise après coupure
+label_pl_recovery_home:Home avant reprise
 label_btt_mini_ups:Support BTT UPS
 label_touch_sound:Son des touches
 label_toast_sound:Notifications
@@ -35,9 +35,9 @@ label_lcd_idle_time:Durée avant diminution
 label_block_touch_on_idle:Bloquer touches en veille
 label_knob_led_color:LED du bouton rotatif
 label_knob_led_idle:Veille du bouton rotatif
-label_start_gcode_on:Gcode avant l'impression
-label_end_gcode_on:Gcode après l'impression
-label_cancel_gcode_on:Gcode d'annulation
+label_start_gcode_enabled:Gcode avant l'impression
+label_end_gcode_enabled:Gcode après l'impression
+label_cancel_gcode_enabled:Gcode d'annulation
 label_steps_setting:Steps par mm
 label_filament_setting:Diamètre filament
 label_maxacceleration:Accélérations maximales
