--- a/Copy to SD Card root directory to update/Language Packs/language_gr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_gr.ini
@@ -18,12 +18,12 @@ label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:Ταχύτητα κίνησης(X Y Z)
 label_auto_load_leveling:Auto Save Load Leveling
-label_probing_after_homing:Probing after homing
+label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Steppers Auto-Alignment
-label_ps_on:Αυτόματη απενεργοποίηση
+label_ps_auto_shutdown:Αυτόματη απενεργοποίηση
 label_fil_runout:Αισθητήρας νήματος
-label_plr_on:Power loss recovery
-label_plr_home:Power Loss Recovery Homing
+label_pl_recovery:Power loss recovery
+label_pl_recovery_home:Power Loss Recovery Homing
 label_btt_mini_ups:BTT UPS Support
 label_touch_sound:Touch sounds
 label_toast_sound:Toast Notifications
@@ -35,9 +35,9 @@ label_lcd_idle_time:Xρονομετρητής αδράνειας οθόνης
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:LED περιστροφικού κουμπιού
 label_knob_led_idle:Rotary Knob LED idle
-label_start_gcode_on:Αρχικό Gcode προ εκτύπωσης
-label_end_gcode_on:Τερματικό Gcode εφότου εκτύπωσης
-label_cancel_gcode_on:Ματαίωση Gcode
+label_start_gcode_enabled:Αρχικό Gcode προ εκτύπωσης
+label_end_gcode_enabled:Τερματικό Gcode εφότου εκτύπωσης
+label_cancel_gcode_enabled:Ματαίωση Gcode
 label_steps_setting:Βήματα ανά χιλ
 label_filament_setting:Filament Diameter
 label_maxacceleration:Μέγιστη επιτάχυνση
