--- a/Copy to SD Card root directory to update/Language Packs/language_hu.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_hu.ini
@@ -18,12 +18,12 @@ label_marlin_show_title:Marlin mód cím támogatás
 label_marlin_type:Marlin mód típusa
 label_move_speed:Mozgás seb. (X-Y-Z)
 label_auto_load_leveling:Szint. auto-mentés/töltés
-label_probing_after_homing:Probing after homing
+label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Motorok automata igazí.
-label_ps_on:Automata kikapcsolás
+label_ps_auto_shutdown:Automata kikapcsolás
 label_fil_runout:Szál érzékelő
-label_plr_on:Energiavesztés helyreáll.
-label_plr_home:Áramkimaradás helyreáll.
+label_pl_recovery:Energiavesztés helyreáll.
+label_pl_recovery_home:Áramkimaradás helyreáll.
 label_btt_mini_ups:BTT UPS Támogatás
 label_touch_sound:Érintés hang
 label_toast_sound:Értesítés hang
@@ -35,9 +35,9 @@ label_lcd_idle_time:LCD Halványítási idő
 label_block_touch_on_idle:Érintés tiltás alapjáraton
 label_knob_led_color:Forgatógomb LED
 label_knob_led_idle:Forgatógomb tétlen
-label_start_gcode_on:Kezdő G-Kód
-label_end_gcode_on:Befejező G-Kód
-label_cancel_gcode_on:Leállító G-Kód
+label_start_gcode_enabled:Kezdő G-Kód
+label_end_gcode_enabled:Befejező G-Kód
+label_cancel_gcode_enabled:Leállító G-Kód
 label_steps_setting:Lépés beállítás
 label_filament_setting:Filament átmérő
 label_maxacceleration:Max gyorsulás
