--- a/Copy to SD Card root directory to update/Language Packs/language_ru.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_ru.ini
@@ -18,12 +18,12 @@ label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin тип режима
 label_move_speed:Скорость (X Y Z)
 label_auto_load_leveling:Автоматическая Загрузка Сетки
-label_probing_after_homing:Probing after homing
+label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Автоматическое выравнивание
-label_ps_on:Автовыключение
+label_ps_auto_shutdown:Автовыключение
 label_fil_runout:Сенсор прутка
-label_plr_on:Работа после потери питания
-label_plr_home:Работа после потери питания с парковкой
+label_pl_recovery:Работа после потери питания
+label_pl_recovery_home:Работа после потери питания с парковкой
 label_btt_mini_ups:Поддержка BTT UPS 
 label_touch_sound:Звуки нажатий
 label_toast_sound:Звуки инфостроки
@@ -35,9 +35,9 @@ label_lcd_idle_time:Время до гашения LCD
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:Подсветка энкодера
 label_knob_led_idle:Простой подсветки энкодера
-label_start_gcode_on:G-код перед печатью
-label_end_gcode_on:G-код после печати
-label_cancel_gcode_on:G-код отмены печати
+label_start_gcode_enabled:G-код перед печатью
+label_end_gcode_enabled:G-код после печати
+label_cancel_gcode_enabled:G-код отмены печати
 label_steps_setting:Настройка шагов на мм
 label_filament_setting:Диаметр прутка
 label_maxacceleration:MAX ускорение
