--- a/Copy to SD Card root directory to update/Language Packs/language_sl.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_sl.ini
@@ -18,12 +18,12 @@ label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:Hitr. pomika (X Y Z)
 label_auto_load_leveling:Auto Save Load Leveling
-label_probing_after_homing:Probing after homing
+label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Steppers Auto-Alignment
-label_ps_on:Samodejni izklop
+label_ps_auto_shutdown:Samodejni izklop
 label_fil_runout:Senzor filamenta
-label_plr_on:Power loss recovery
-label_plr_home:Power Loss Recovery Homing
+label_pl_recovery:Power loss recovery
+label_pl_recovery_home:Power Loss Recovery Homing
 label_btt_mini_ups:BTT UPS Support
 label_touch_sound:Touch sounds
 label_toast_sound:Toast Notifications
@@ -35,9 +35,9 @@ label_lcd_idle_time:Zatemnitev po času
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:LED enkoder gumba
 label_knob_led_idle:Rotary Knob LED idle
-label_start_gcode_on:Zaženi startno G-kodo
-label_end_gcode_on:Zaženi končno G-kodo
-label_cancel_gcode_on:Zaženi G-kodo preklica
+label_start_gcode_enabled:Zaženi startno G-kodo
+label_end_gcode_enabled:Zaženi končno G-kodo
+label_cancel_gcode_enabled:Zaženi G-kodo preklica
 label_steps_setting:Št. korakov na MM
 label_filament_setting:Filament Diameter
 label_maxacceleration:Max pospešek
