--- a/Copy to SD Card root directory to update/Language Packs/language_tr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_tr.ini
@@ -18,12 +18,12 @@ label_marlin_show_title:Marlin Modu Başlık Desteği
 label_marlin_type:Marlin Mode Type
 label_move_speed:Hareket Hızı(X Y Z)
 label_auto_load_leveling:Seviyelemeyi Oto Kaydet/Yükle
-label_probing_after_homing:Probing after homing
+label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Motor Oto-Hizalama
-label_ps_on:Oto. Kapanma
+label_ps_auto_shutdown:Oto. Kapanma
 label_fil_runout:Filaman Sensörü
-label_plr_on:Güç Kesintisi Kurtarma
-label_plr_home:Güç Kesintisi Sıfırama
+label_pl_recovery:Güç Kesintisi Kurtarma
+label_pl_recovery_home:Güç Kesintisi Sıfırama
 label_btt_mini_ups:BTT UPS Desteği
 label_touch_sound:Dokunma Sesi
 label_toast_sound:Ara Bildirimler
@@ -35,9 +35,9 @@ label_lcd_idle_time:Parlaklık Kısılma Süresi
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:Döner Düğme LED
 label_knob_led_idle:Düğme LED bekleme
-label_start_gcode_on:Başlangıç gcodeu kullan
-label_end_gcode_on:Bitiş gcodeu kullan
-label_cancel_gcode_on:İptal gcodeu kullan
+label_start_gcode_enabled:Başlangıç gcodeu kullan
+label_end_gcode_enabled:Bitiş gcodeu kullan
+label_cancel_gcode_enabled:İptal gcodeu kullan
 label_steps_setting:mm/adım
 label_filament_setting:Filament Diameter
 label_maxacceleration:Maks. İvmelenme
