--- a/TFT/src/User/config.ini
+++ b/TFT/src/User/config.ini
@@ -145,17 +145,17 @@ status_screen:1
 ## Title background color
 title_background_color:1
 
-## Background color
-background_color:1
+## Menu background color
+menu_background_color:1
 
-## Font foreground color
-font_color:0
+## Menu font color
+menu_font_color:0
 
 ## Reminder font color, such as: "No print attached", "Busy processing", etc
-reminder_color:2
+reminder_font_color:2
 
-## Status (e.g. volume reminder) font color, such as: "Card inserted", "Card removed"
-status_color:5
+## Status (e.g. volume reminder, ABL probing point etc...) font color, such as: "Card inserted", "Card removed"
+status_font_color:5
 
 ## Backgroud color for X Y Z position display in Status Screen menu
 status_xyz_bg_color:15
@@ -205,8 +205,8 @@ files_sort_by:0
 #   Options: [disable: 0, enable: 1]
 files_list_mode:1
 
-#### Fan Speed As Percentage
-# Show fan speed as percentage. If disabled fan speeed will be displayed as PWM values.
+#### Fan Speed In Percentage
+# Show fan speed in percentage. If disabled fan speeed will be displayed as PWM values.
 #   Options: [disable: 0, enable: 1]
 fan_speed_percentage:1
 
@@ -300,7 +300,7 @@ marlin_background_color:1
 ## Marlin Mode font color
 marlin_font_color:8
 
-#### Marlin Mode Fullscreen Support
+#### Fullscreen Marlin Mode
 # Run Marlin Mode in fullscreen.
 #
 # NOTE: Disable is recommended for TFT24.
@@ -308,7 +308,7 @@ marlin_font_color:8
 #   Options: [disable: 0, enable: 1]
 marlin_fullscreen:0
 
-#### Marlin Mode Title Support
+#### Show Marlin Mode Title
 # Show banner text at the top of the TFT in Marlin Mode.
 #   Options: [disable: 0, enable: 1]
 marlin_show_title:1
@@ -510,7 +510,7 @@ level_feedrate:XY6000 Z6000
 #   Options: [disable: 0, enable: 1]
 inverted_axis:X0 Y0 Z0 LY0
 
-#### Probing After Homing (Probe Offset)
+#### Probing For Z Offset (Probe Offset)
 # Used by the Probe Offset menu for the Z offset tuning process.
 # If enabled, after homing a probing in the center of the bed is performed and then the nozzle
 # is moved to the XY probing point.
@@ -527,7 +527,7 @@ inverted_axis:X0 Y0 Z0 LY0
 #     homing (e.g. USE_PROBE_FOR_Z_HOMING enabled in Marlin firmware).
 #
 #   Options: [disable: 0, enable: 1]
-probing_after_homing:1
+probing_z_offset:1
 
 #### Probing Z Raise (Probe Offset, Mesh Editor)
 # Used by the Probe Offset / Mesh Editor menu for the Z offset / Z height tuning process.
@@ -586,16 +586,18 @@ preheat_temp_6:T250 B90
 # Power Supply Settings (only if connected to TFT controller)
 #--------------------------------------------------------------------
 
-#### Power Supply Auto Shutdown Support
-# Enable power supply auto shutdown after a print is finished when hotend temperature drops below target value.
-#   Options: [disable: 0, enable: 1, auto-detect: 2]
-ps_auto_shutdown:0
-
 #### Active HIGH Power Supply Logic
+# Used in case it is supported by the TFT.
 # The power supply uses this HIGH signal logic to stay ON.
 # The power supply uses the opposite of this logic to stay OFF.
 #   Options: [disable: 0, enable: 1]
 ps_active_high:1
+
+#### Default Power Supply Auto Shutdown Mode
+# Used in case it is supported by the TFT.
+# Enable power supply auto shutdown after a print is finished when hotend temperature drops below target value.
+#   Options: [disable: 0, enable: 1, auto-detect: 2]
+ps_auto_shutdown:0
 
 #### Power Supply Auto Shutdown Temperature
 # Maximum hotend temperature for automatic shutdown after printing, if automatic shutdown is enabled.
@@ -604,7 +606,7 @@ ps_active_high:1
 # will wait for the hotend temperature to drop below this value before shutting down automatically.
 #   Unit: [temperature in °C]
 #   Value range: [min: 20, max: 1000]
-ps_auto_shutdown_temperature:50
+ps_auto_shutdown_temp:50
 
 
 #--------------------------------------------------------------------
@@ -616,7 +618,7 @@ ps_auto_shutdown_temperature:50
 #   2) Configure the sensor in the firmware of your mainboard.
 #   3) Add M75 to "start_gcode" and M77 to "end_gcode" of the TFT (or your slicer).
 
-#### Filament Runout Sensor Support
+#### Default Filament Runout Sensor
 # Select the type of filament runout sensor and its default enabled/disabled state.
 #
 #   Options: [Normal Disabled: 0, Normal Enabled: 1, Smart Disabled: 2, Smart Enabled: 3]
@@ -650,7 +652,7 @@ fil_runout_distance:7
 # Power Loss Recovery & BTT UPS Settings
 #--------------------------------------------------------------------
 
-#### Power Loss Recovery Support
+#### Default Power Loss Recovery Mode
 # Enable power loss recovery.
 # Disable to reduce the loss of SD card or U disk.
 #   Options: [disable: 0, enable: 1]
@@ -798,17 +800,17 @@ custom_gcode_7:M502\n
 #      - start_gcode: M75\n
 #      - end_gcode: M77\n
 
-#### Default Start Gcode State
+#### Default Start Gcode Status
 #   Options: [disable: 0, enable: 1]
-start_gcode_state:0
+start_gcode_enabled:0
 
-#### Default End Gcode State
+#### Default End Gcode Status
 #   Options: [disable: 0, enable: 1]
-end_gcode_state:0
+end_gcode_enabled:0
 
-#### Default Cancel Gcode State
+#### Default Cancel Gcode Status
 #   Options: [disable: 0, enable: 1]
-cancel_gcode_state:0
+cancel_gcode_enabled:0
 
 #### Start Gcode
 # This gcode will runs before starting a print if `start_gcode_enabled` is enabled.
