--- a/Copy to SD Card root directory to update/Language Packs/language_ca.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_ca.ini
@@ -18,12 +18,12 @@ label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:Velocitat de moviment(X Y Z)
 label_auto_load_leveling:Auto Save Load Leveling
-label_probing_after_homing:Probing after homing
+label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Steppers Auto-Alignment
-label_ps_on:Apag. aut.
+label_ps_auto_shutdown:Auto shutdown
 label_fil_runout:Sensor de filament
-label_plr_on:Recuperació de pèrdua d’energia
-label_plr_home:Power Loss Recovery Homing
+label_pl_recovery:Recuperació de pèrdua d’energia
+label_pl_recovery_home:Power Loss Recovery Homing
 label_btt_mini_ups:BTT UPS Support
 label_touch_sound:Touch sounds
 label_toast_sound:Toast Notifications
@@ -35,9 +35,9 @@ label_lcd_idle_time:Temporitzador inactiu LCD
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:Perilla rotativa LED
 label_knob_led_idle:Rotary Knob LED idle
-label_start_gcode_on:Enviar Gcode inicial
-label_end_gcode_on:Enviar Gcode final
-label_cancel_gcode_on:Cancel · lar Gcode
+label_start_gcode_enabled:Enviar Gcode inicial
+label_end_gcode_enabled:Enviar Gcode final
+label_cancel_gcode_enabled:Cancel · lar Gcode
 label_steps_setting:Passos per MM
 label_filament_setting:Filament Diameter
 label_maxacceleration:Max Acceleració
