--- a/Copy to SD Card root directory to update/Language Packs/language_cn.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_cn.ini
@@ -18,12 +18,12 @@ label_marlin_show_title:Marlin模式显示标题
 label_marlin_type:Marlin模式类型
 label_move_speed:移动速度(X Y Z)
 label_auto_load_leveling:自动保存/加载调平数据
-label_probing_after_homing:Probing after homing
+label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z轴多电机自动对齐
-label_ps_on:自动关机
+label_ps_auto_shutdown:自动关机
 label_fil_runout:耗材检测传感器
-label_plr_on:断电续打
-label_plr_home:断电续打前归零
+label_pl_recovery:断电续打
+label_pl_recovery_home:断电续打前归零
 label_btt_mini_ups:启用BTT UPS
 label_touch_sound:按钮声音
 label_toast_sound:Toast 提示声音
@@ -35,9 +35,9 @@ label_lcd_idle_time:LCD自动睡眠时间
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:旋钮LED颜色
 label_knob_led_idle:旋钮LED自动睡眠
-label_start_gcode_on:执行打印前起始Gcode
-label_end_gcode_on:执行打印后结束Gcode
-label_cancel_gcode_on:中断打印Gcode
+label_start_gcode_enabled:执行打印前起始Gcode
+label_end_gcode_enabled:执行打印后结束Gcode
+label_cancel_gcode_enabled:中断打印Gcode
 label_steps_setting:电机每毫米脉冲数(Steps/mm)
 label_filament_setting:Filament Diameter
 label_maxacceleration:最大加速度
