--- a/Copy to SD Card root directory to update/Language Packs/language_it.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_it.ini
@@ -18,12 +18,12 @@ label_marlin_show_title:Mostra titolo in Marlin
 label_marlin_type:Modalità Marlin
 label_move_speed:Vel. movimenti(X Y Z)
 label_auto_load_leveling:Auto salva/carica liv.
-label_probing_after_homing:Probing after homing
+label_probing_z_offset:Sondare per Z offset
 label_z_steppers_alignment:Auto allineamento asse Z
-label_ps_on:Auto spegnimento
+label_ps_auto_shutdown:Auto spegnimento
 label_fil_runout:Sensore filamento
-label_plr_on:Power loss recovery
-label_plr_home:Power loss rec. homing
+label_pl_recovery:Power loss recovery
+label_pl_recovery_home:Power loss rec. homing
 label_btt_mini_ups:Supporto a BTT UPS
 label_touch_sound:Suono al tocco
 label_toast_sound:Notifiche toast
@@ -35,9 +35,9 @@ label_lcd_idle_time:Timer luminosità
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:LED manopola 
 label_knob_led_idle:LED manopola spento
-label_start_gcode_on:Inserisci start gcode
-label_end_gcode_on:Inserisci end gcode
-label_cancel_gcode_on:Script canc. stampa
+label_start_gcode_enabled:Inserisci start gcode
+label_end_gcode_enabled:Inserisci end gcode
+label_cancel_gcode_enabled:Script canc. stampa
 label_steps_setting:Step per mm
 label_filament_setting:Diametro filamento
 label_maxacceleration:Accelerazione massima
