--- a/Copy to SD Card root directory to update/Language Packs/language_jp.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_jp.ini
@@ -18,12 +18,12 @@ label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:移動速度(X Y Z)
 label_auto_load_leveling:Auto Save Load Leveling
-label_probing_after_homing:Probing after homing
+label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Steppers Auto-Alignment
-label_ps_on:オートパワー
+label_ps_auto_shutdown:オートパワー
 label_fil_runout:フィラメントセンサ
-label_plr_on:Power loss recovery
-label_plr_home:Power Loss Recovery Homing
+label_pl_recovery:Power loss recovery
+label_pl_recovery_home:Power Loss Recovery Homing
 label_btt_mini_ups:BTT UPS Support
 label_touch_sound:Touch sounds
 label_toast_sound:Toast Notifications
@@ -35,9 +35,9 @@ label_lcd_idle_time:LCD調光アイドルタイマー
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:回転ノブLED
 label_knob_led_idle:Rotary Knob LED idle
-label_start_gcode_on:印刷前にGコードを開始する
-label_end_gcode_on:印刷後にGコードを終了する
-label_cancel_gcode_on:Gコードをキャンセルする
+label_start_gcode_enabled:印刷前にGコードを開始する
+label_end_gcode_enabled:印刷後にGコードを終了する
+label_cancel_gcode_enabled:Gコードをキャンセルする
 label_steps_setting:MMあたりのステップ
 label_filament_setting:Filament Diameter
 label_maxacceleration:最大加速度
