--- a/Copy to SD Card root directory to update/Language Packs/language_nl.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_nl.ini
@@ -18,12 +18,12 @@ label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:Bewegingssnelheid(X Y Z)
 label_auto_load_leveling:Auto Save Load Leveling
-label_probing_after_homing:Probing after homing
+label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Steppers Auto-Alignment
-label_ps_on:Auto Power
+label_ps_auto_shutdown:Auto Power
 label_fil_runout:Filament sensor
-label_plr_on:Power loss recovery
-label_plr_home:Power Loss Recovery Homing
+label_pl_recovery:Power loss recovery
+label_pl_recovery_home:Power Loss Recovery Homing
 label_btt_mini_ups:BTT UPS Support
 label_touch_sound:Touch sounds
 label_toast_sound:Toast Notifications
@@ -35,9 +35,9 @@ label_lcd_idle_time:Idle timeout
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:Draaiknop LED
 label_knob_led_idle:Draaiknop LED inactief
-label_start_gcode_on:Start Gcode before print
-label_end_gcode_on:End Gcode after print
-label_cancel_gcode_on:Cancel Gcode
+label_start_gcode_enabled:Start Gcode before print
+label_end_gcode_enabled:End Gcode after print
+label_cancel_gcode_enabled:Cancel Gcode
 label_steps_setting:Stappen permm
 label_filament_setting:Filament Diameter
 label_maxacceleration:Max Acceleratie
