--- a/Copy to SD Card root directory to update/Language Packs/language_tc.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_tc.ini
@@ -18,12 +18,12 @@ label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:移動速度(X Y Z)
 label_auto_load_leveling:Auto Save Load Leveling
-label_probing_after_homing:Probing after homing
+label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Steppers Auto-Alignment
-label_ps_on:自動關機
+label_ps_auto_shutdown:自動關機
 label_fil_runout:耗材感應器
-label_plr_on:断电续打
-label_plr_home:Power Loss Recovery Homing
+label_pl_recovery:断电续打
+label_pl_recovery_home:Power Loss Recovery Homing
 label_btt_mini_ups:BTT UPS Support
 label_touch_sound:按鈕聲音
 label_toast_sound:Toast 提示聲音
@@ -35,9 +35,9 @@ label_lcd_idle_time:螢幕進入睡眠時間
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:旋鈕LED顏色
 label_knob_led_idle:旋鈕LED自動睡眠
-label_start_gcode_on:執行起始G-code
-label_end_gcode_on:執行結尾G-code
-label_cancel_gcode_on:中斷執行G-code
+label_start_gcode_enabled:執行起始G-code
+label_end_gcode_enabled:執行結尾G-code
+label_cancel_gcode_enabled:中斷執行G-code
 label_steps_setting:電機每毫米步數Steps/mm
 label_filament_setting:Filament Diameter
 label_maxacceleration:最大加速度
