--- a/Copy to SD Card root directory to update/Language Packs/language_uk.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_uk.ini
@@ -18,12 +18,12 @@ label_marlin_show_title:Marlin Mode Title Support
 label_marlin_type:Marlin Mode Type
 label_move_speed:Швидкість (X Y Z)
 label_auto_load_leveling:Auto Save Load Leveling
-label_probing_after_homing:Probing after homing
+label_probing_z_offset:Probing for Z offset
 label_z_steppers_alignment:Z Steppers Auto-Alignment
-label_ps_on:автовимкнення
+label_ps_auto_shutdown:автовимкнення
 label_fil_runout:Сенсор філаменту
-label_plr_on:Робота після втрати живлення
-label_plr_home:Power Loss Recovery Homing
+label_pl_recovery:Робота після втрати живлення
+label_pl_recovery_home:Power Loss Recovery Homing
 label_btt_mini_ups:BTT UPS Support
 label_touch_sound:Звуки натискань
 label_toast_sound:Звуки інфострічки
@@ -35,9 +35,9 @@ label_lcd_idle_time:Час до загасання LCD
 label_block_touch_on_idle:Block touch on idle
 label_knob_led_color:Підсвічування енкодера
 label_knob_led_idle:Простій підсвічування енкодера
-label_start_gcode_on:Розпочати G-код перед друком
-label_end_gcode_on:Завершити G-код після друку
-label_cancel_gcode_on:G-код скасувати друк
+label_start_gcode_enabled:Розпочати G-код перед друком
+label_end_gcode_enabled:Завершити G-код після друку
+label_cancel_gcode_enabled:G-код скасувати друк
 label_steps_setting:Налаштування кроків на мм
 label_filament_setting:Filament Diameter
 label_maxacceleration:MAX прискорення
