--- a/Copy to SD Card - MKS/config.ini
+++ b/Copy to SD Card - MKS/config.ini
@@ -97,10 +97,20 @@ serial_port:P1:7 P2:0 P3:0 P4:0
 # The TFT intercepts the M600 gcode (filament change) and emulates the handling logic
 # otherwise provided by Marlin firmware.
 #
-# NOTE: Enable it, in case Marlin firmware does not properly support M600 on the mainboard.
+# NOTE: Enable it in case Marlin firmware does not properly support M600 on the mainboard.
 #
 #   Options: [disable: 0, enable: 1]
 emulated_m600:0
+
+#### Emulated M109 And M190
+# The TFT intercepts the blocking M109 and M190 gcodes (set target hotend and bed temperatures)
+# and converts them to the non blocking M104 and M140 gcodes respectively.
+#
+# NOTE: Enable it to allow the TFT can continue to dialog (e.g. using menus sending gcodes to the
+#       mainboard) with Marlin firmware even when the target temperature is not yet reached.
+#
+#   Options: [disable: 0, enable: 1]
+emulated_m109_m190:0
 
 
 #--------------------------------------------------------------------
