--- a/Copy to SD Card root directory to update/Language Packs/language_cn.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_cn.ini
@@ -1,9 +1,10 @@
 #### Language Code:CN
-## Language Version:20210829
+## Language Version:20210903
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
 label_emulated_m600:模拟M600
+label_emulated_m109_m190:Emulated M109 / M190
 label_rotate_ui:旋转界面
 label_language:简体中文
 label_ack_notification:ACK 弹窗类型
