--- a/Copy to SD Card root directory to update/Language Packs/language_it.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_it.ini
@@ -1,9 +1,10 @@
 #### Language Code:IT
-## Language Version:20210829
+## Language Version:20210903
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
 label_emulated_m600:M600 emulato
+label_emulated_m109_m190:M109 / M190 emulati
 label_rotate_ui:Ruota
 label_language:Italiano
 label_ack_notification:Tipo di popup
