--- a/Copy to SD Card root directory to update/Language Packs/language_pt.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_pt.ini
@@ -1,9 +1,10 @@
 #### Language Code:PT
-## Language Version:20210829
+## Language Version:20210903
 ## Maximum byte per keyword is 250 Bytes.
 ## Escape characters are not supported except newline '\n'
 
 label_emulated_m600:Emulated M600
+label_emulated_m109_m190:Emulated M109 / M190
 label_rotate_ui:Rodar
 label_language:Portugues
 label_ack_notification:ACK notification style
