--- a/Copy to SD Card root directory to update/Language Packs/language_cz.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_cz.ini
@@ -5,7 +5,7 @@
 
 label_emulated_m600:Emulace M600
 label_emulated_m109_m190:Emulated M109 / M190
-label_rotate_ui:Otočit UI
+label_rotated_ui:Otočit UI
 label_language:Čeština
 label_ack_notification:Styl oznámení ACK
 label_files_sort_by:Řazení souborů
@@ -33,7 +33,7 @@ label_heater_sound:Zvuk při dosažení teploty
 label_lcd_brightness:LCD Jas
 label_lcd_idle_brightness:LCD snížení jasu
 label_lcd_idle_time:LCD snížení jasu po
-label_block_touch_on_idle:Blok. dotek při zatmavení
+label_lcd_lock_on_idle:Blok. dotek při zatmavení
 label_knob_led_color:Rotační knob LED
 label_knob_led_idle:Rotační knob LED idle
 label_start_gcode_enabled:Spustit Gcode před tiskem
