--- a/Copy to SD Card root directory to update/Language Packs/language_cn.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_cn.ini
@@ -5,7 +5,7 @@
 
 label_emulated_m600:模拟M600
 label_emulated_m109_m190:Emulated M109 / M190
-label_rotate_ui:旋转界面
+label_rotated_ui:旋转界面
 label_language:简体中文
 label_ack_notification:ACK 弹窗类型
 label_files_sort_by:Sort files by
@@ -33,7 +33,7 @@ label_heater_sound:加热提示音
 label_lcd_brightness:LCD背光亮度
 label_lcd_idle_brightness:LCD睡眠背光亮度
 label_lcd_idle_time:LCD自动睡眠时间
-label_block_touch_on_idle:Block touch on idle
+label_lcd_lock_on_idle:LCD lock on idle
 label_knob_led_color:旋钮LED颜色
 label_knob_led_idle:旋钮LED自动睡眠
 label_start_gcode_enabled:执行打印前起始Gcode
