--- a/Copy to SD Card root directory to update/Language Packs/language_de.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_de.ini
@@ -5,7 +5,7 @@
 
 label_emulated_m600:Emuliere M600
 label_emulated_m109_m190:Emulated M109 / M190
-label_rotate_ui:UI drehen
+label_rotated_ui:UI drehen
 label_language:Deutsch
 label_ack_notification:ACK - Stil
 label_files_sort_by:Sortiere Dateien nach
@@ -33,7 +33,7 @@ label_heater_sound:Ton bei erreichter Temp.
 label_lcd_brightness:LCD-Helligkeit
 label_lcd_idle_brightness:LCD-Timeout-Helligkeit
 label_lcd_idle_time:LCD-Timeout
-label_block_touch_on_idle:Kein Touch im Standby
+label_lcd_lock_on_idle:Kein Touch im Standby
 label_knob_led_color:Drehknopf LED Farbe
 label_knob_led_idle:Drehknopf LED idle Farbe
 label_start_gcode_enabled:Gcode vor Druck
