--- a/Copy to SD Card root directory to update/Language Packs/language_es.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_es.ini
@@ -5,7 +5,7 @@
 
 label_emulated_m600:Emulated M600
 label_emulated_m109_m190:Emulated M109 / M190
-label_rotate_ui:Rotar
+label_rotated_ui:Rotar
 label_language:Español
 label_ack_notification:ACK notification style
 label_files_sort_by:Sort files by
@@ -33,7 +33,7 @@ label_heater_sound:Heater notification
 label_lcd_brightness:Brightness
 label_lcd_idle_brightness:Idle brightness
 label_lcd_idle_time:Idle timeout
-label_block_touch_on_idle:Block touch on idle
+label_lcd_lock_on_idle:LCD lock on idle
 label_knob_led_color:Rotary Knob LED
 label_knob_led_idle:Rotary Knob LED idle
 label_start_gcode_enabled:Start Gcode before print
