--- a/Copy to SD Card root directory to update/Language Packs/language_fr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_fr.ini
@@ -5,7 +5,7 @@
 
 label_emulated_m600:Emuler M600
 label_emulated_m109_m190:Emulated M109 / M190
-label_rotate_ui:Rotation
+label_rotated_ui:Rotation
 label_language:Français
 label_ack_notification:Style de notification ACK
 label_files_sort_by:Trier les fichiers par
@@ -33,7 +33,7 @@ label_heater_sound:Notification de chauffe
 label_lcd_brightness:Luminosité
 label_lcd_idle_brightness:Diminution luminosité
 label_lcd_idle_time:Durée avant diminution
-label_block_touch_on_idle:Bloquer touches en veille
+label_lcd_lock_on_idle:Bloquer touches en veille
 label_knob_led_color:LED du bouton rotatif
 label_knob_led_idle:Veille du bouton rotatif
 label_start_gcode_enabled:Gcode avant l'impression
