--- a/Copy to SD Card root directory to update/Language Packs/language_gr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_gr.ini
@@ -5,7 +5,7 @@
 
 label_emulated_m600:Emulated M600
 label_emulated_m109_m190:Emulated M109 / M190
-label_rotate_ui:Περιστροφή UI
+label_rotated_ui:Περιστροφή UI
 label_language:Ελληνικά
 label_ack_notification:ACK notification style
 label_files_sort_by:Sort files by
@@ -33,7 +33,7 @@ label_heater_sound:Heater notification
 label_lcd_brightness:Φωτεινότητα
 label_lcd_idle_brightness:Φωτεινότητα LCD σκοτεινή
 label_lcd_idle_time:Xρονομετρητής αδράνειας οθόνης
-label_block_touch_on_idle:Block touch on idle
+label_lcd_lock_on_idle:LCD lock on idle
 label_knob_led_color:LED περιστροφικού κουμπιού
 label_knob_led_idle:Rotary Knob LED idle
 label_start_gcode_enabled:Αρχικό Gcode προ εκτύπωσης
