--- a/Copy to SD Card root directory to update/Language Packs/language_hu.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_hu.ini
@@ -5,7 +5,7 @@
 
 label_emulated_m600:Emulált M600
 label_emulated_m109_m190:Emulated M109 / M190
-label_rotate_ui:Forgatás
+label_rotated_ui:Forgatás
 label_language:Magyar
 label_ack_notification:ACK Értesítési stílus
 label_files_sort_by:Fájlok rendezése
@@ -33,7 +33,7 @@ label_heater_sound:Fűtés hang
 label_lcd_brightness:Fényerősség
 label_lcd_idle_brightness:LCD Halványítás
 label_lcd_idle_time:LCD Halványítási idő
-label_block_touch_on_idle:Érintés tiltás alapjáraton
+label_lcd_lock_on_idle:Érintés tiltás alapjáraton
 label_knob_led_color:Forgatógomb LED
 label_knob_led_idle:Forgatógomb tétlen
 label_start_gcode_enabled:Kezdő G-Kód
