--- a/Copy to SD Card root directory to update/Language Packs/language_tr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_tr.ini
@@ -5,7 +5,7 @@
 
 label_emulated_m600:Emulated M600
 label_emulated_m109_m190:Emulated M109 / M190
-label_rotate_ui:Döndür
+label_rotated_ui:Döndür
 label_language:Türkçe
 label_ack_notification:Onay mesajı stili
 label_files_sort_by:Sort files by
@@ -33,7 +33,7 @@ label_heater_sound:Heater notification
 label_lcd_brightness:Parlaklık
 label_lcd_idle_brightness:Parlaklık Kısılma Oranı
 label_lcd_idle_time:Parlaklık Kısılma Süresi
-label_block_touch_on_idle:Block touch on idle
+label_lcd_lock_on_idle:LCD lock on idle
 label_knob_led_color:Döner Düğme LED
 label_knob_led_idle:Düğme LED bekleme
 label_start_gcode_enabled:Başlangıç gcodeu kullan
