--- a/Copy to SD Card root directory to update/Language Packs/language_uk.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_uk.ini
@@ -5,7 +5,7 @@
 
 label_emulated_m600:Emulated M600
 label_emulated_m109_m190:Emulated M109 / M190
-label_rotate_ui:Повернути інтерфейс
+label_rotated_ui:Повернути інтерфейс
 label_language:Українська
 label_ack_notification:ACK стиль повідомлення
 label_files_sort_by:Sort files by
@@ -33,7 +33,7 @@ label_heater_sound:Heater notification
 label_lcd_brightness:Яскравість
 label_lcd_idle_brightness:Регулювання яскравості LCD
 label_lcd_idle_time:Час до загасання LCD
-label_block_touch_on_idle:Block touch on idle
+label_lcd_lock_on_idle:LCD lock on idle
 label_knob_led_color:Підсвічування енкодера
 label_knob_led_idle:Простій підсвічування енкодера
 label_start_gcode_enabled:Розпочати G-код перед друком
