--- a/Copy to SD Card root directory to update/Language Packs/language_cz.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_cz.ini
@@ -128,6 +128,7 @@ label_ready:Připraven
 label_busy:Zpracovávám, čekejte prosím...
 label_loading:Nahrávám...
 label_unconnected:Tiskárna není připojena!
+label_listening:TFT in Listening Mode!
 label_info:Info
 label_invalid_value:Neplatná hodnota/y!
 label_timeout_reached:Časový limit vypršel!
@@ -219,6 +220,8 @@ label_feature_settings:Vlastnosti
 label_connection_settings:Připojení
 label_serial_ports:SerialPort
 label_baudrate:Rychlost
+label_listening_enable:Listen: on
+label_listening_disable:Normal: on
 label_eeprom_settings:EEPROM
 label_rgb_settings:Barva LED
 label_rgb_off:LED vyp.
