--- a/Copy to SD Card root directory to update/Language Packs/language_es.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_es.ini
@@ -128,6 +128,7 @@ label_ready:Preparado
 label_busy:Procesamiento ocupado, por favor espere...
 label_loading:Cargando...
 label_unconnected:¡No hay comunicación con impresora!
+label_listening:TFT in Listening Mode!
 label_info:Info
 label_invalid_value:Invalid value(s)
 label_timeout_reached:Timeout reached!
@@ -219,6 +220,8 @@ label_feature_settings:Añadidos
 label_connection_settings:Connection
 label_serial_ports:S. Ports
 label_baudrate:BaudRate
+label_listening_enable:Listen: on
+label_listening_disable:Normal: on
 label_eeprom_settings:EEPROM
 label_rgb_settings:Color LED
 label_rgb_off:Apagar LED
