--- a/Copy to SD Card root directory to update/Language Packs/language_hu.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_hu.ini
@@ -128,6 +128,7 @@ label_ready:Kész
 label_busy:Feldolgozás alatt, kérlek várj...
 label_loading:Betöltés...
 label_unconnected:Nincs nyomtató csatlakoztatva!
+label_listening:TFT in Listening Mode!
 label_info:Infó
 label_invalid_value:Nincs érvényes érték megadva
 label_timeout_reached:Időkorlát elérve!
@@ -219,6 +220,8 @@ label_feature_settings:Funkciók
 label_connection_settings:Kapcsolat
 label_serial_ports:S. Portok
 label_baudrate:Kapcsolat
+label_listening_enable:Listen: on
+label_listening_disable:Normal: on
 label_eeprom_settings:EEPROM
 label_rgb_settings:LED Szín
 label_rgb_off:LED Ki
