--- a/Copy to SD Card root directory to update/Language Packs/language_ca.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_ca.ini
@@ -128,6 +128,7 @@ label_ready:A punt!!
 label_busy:Processament ocupat, si us plau esperi ...
 label_loading:Carregant ...
 label_unconnected:No hi ha comunicació amb impressora!
+label_listening:TFT in Listening Mode!
 label_info:Informació
 label_invalid_value:Invalid value(s)
 label_timeout_reached:Timeout reached!
@@ -219,6 +220,8 @@ label_feature_settings:Afegits
 label_connection_settings:Connection
 label_serial_ports:S. Ports
 label_baudrate:Velocitat de transmissió
+label_listening_enable:Listen: on
+label_listening_disable:Normal: on
 label_eeprom_settings:EEPROM
 label_rgb_settings:Color LED
 label_rgb_off:Apagar LED
