--- a/Copy to SD Card root directory to update/Language Packs/language_cn.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_cn.ini
@@ -128,6 +128,7 @@ label_ready:准备打印
 label_busy:系统繁忙,请稍候...
 label_loading:加载中...
 label_unconnected:未连接到打印机!
+label_listening:TFT in Listening Mode!
 label_info:提示
 label_invalid_value:没有有效的条件!
 label_timeout_reached:已超时!
@@ -219,6 +220,8 @@ label_feature_settings:功能设置
 label_connection_settings:连接
 label_serial_ports:S. Ports
 label_baudrate:波特率
+label_listening_enable:Listen: on
+label_listening_disable:Normal: on
 label_eeprom_settings:EEPROM
 label_rgb_settings:灯光颜色
 label_rgb_off:熄灭灯光
