--- a/Copy to SD Card root directory to update/Language Packs/language_de.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_de.ini
@@ -128,6 +128,7 @@ label_ready:Bereit
 label_busy:Bitte warten ...
 label_loading:Lade ...
 label_unconnected:Keine Verbindung zum Drucker!
+label_listening:TFT in Listening Mode!
 label_info:Info
 label_invalid_value:Ungültige(r) Wert(e)!
 label_timeout_reached:Zeit überschritten!
@@ -219,6 +220,8 @@ label_feature_settings:Andere
 label_connection_settings:Verbindung
 label_serial_ports:S. Ports
 label_baudrate:Baudrate
+label_listening_enable:Listen: on
+label_listening_disable:Normal: on
 label_eeprom_settings:EEPROM
 label_rgb_settings:LED Farbe
 label_rgb_off:LED aus
