--- a/Copy to SD Card root directory to update/Language Packs/language_fr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_fr.ini
@@ -128,6 +128,7 @@ label_ready:Prête
 label_busy:Occupée, veuillez patienter...
 label_loading:Chargement...
 label_unconnected:Aucune imprimante connectée !
+label_listening:TFT in Listening Mode!
 label_info:Infos
 label_invalid_value:Aucune valeur valide fournie !
 label_timeout_reached:Délai d'attente dépassé !
@@ -219,6 +220,8 @@ label_feature_settings:Paramètres
 label_connection_settings:Connexion
 label_serial_ports:S. Ports
 label_baudrate:Vitesse
+label_listening_enable:Listen: on
+label_listening_disable:Normal: on
 label_eeprom_settings:EEPROM
 label_rgb_settings:LED
 label_rgb_off:LED Off
