--- a/Copy to SD Card root directory to update/Language Packs/language_gr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_gr.ini
@@ -128,6 +128,7 @@ label_ready:Έτοιμο
 label_busy:Απασχολημένη επεξεργασία, παρακάλω περιμένετε ...
 label_loading:Φόρτωση...
 label_unconnected:Δεν υπάρχει συνδεδεμένος εκτυπωτής!
+label_listening:TFT in Listening Mode!
 label_info:Πληροφορίες
 label_invalid_value:Invalid value(s)
 label_timeout_reached:Timeout reached!
@@ -219,6 +220,8 @@ label_feature_settings:Χαρακτηριστικών
 label_connection_settings:Connection
 label_serial_ports:S. Ports
 label_baudrate:BaudRate
+label_listening_enable:Listen: on
+label_listening_disable:Normal: on
 label_eeprom_settings:EEPROM
 label_rgb_settings:Χρώμα LED
 label_rgb_off:Απενεργοποίηση LED
