--- a/Copy to SD Card root directory to update/Language Packs/language_it.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_it.ini
@@ -128,6 +128,7 @@ label_ready:Pronta
 label_busy:Stampante occupata, attendere...
 label_loading:Caricamento...
 label_unconnected:Stampante non connessa
+label_listening:TFT in Listening Mode!
 label_info:Info
 label_invalid_value:Valori forniti non validi!
 label_timeout_reached:Timeout raggiunto!
@@ -219,6 +220,8 @@ label_feature_settings:Configura
 label_connection_settings:Connessioni
 label_serial_ports:S. Ports
 label_baudrate:Baudrate
+label_listening_enable:Listen: on
+label_listening_disable:Normal: on
 label_eeprom_settings:EEPROM
 label_rgb_settings:LED RGB
 label_rgb_off:Spegni
