--- a/Copy to SD Card root directory to update/Language Packs/language_jp.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_jp.ini
@@ -128,6 +128,7 @@ label_ready:準備中
 label_busy:ビジー状態、しばらくお待ちください...
 label_loading:ロッド中...
 label_unconnected:プリンターに連続していない!
+label_listening:TFT in Listening Mode!
 label_info:情報
 label_invalid_value:Invalid value(s)
 label_timeout_reached:Timeout reached!
@@ -219,6 +220,8 @@ label_feature_settings:機能
 label_connection_settings:Connection
 label_serial_ports:S. Ports
 label_baudrate:ポートレート
+label_listening_enable:Listen: on
+label_listening_disable:Normal: on
 label_eeprom_settings:EEPROM
 label_rgb_settings:LED カラー
 label_rgb_off:LED オフ
