--- a/Copy to SD Card root directory to update/Language Packs/language_nl.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_nl.ini
@@ -128,6 +128,7 @@ label_ready:Gereed
 label_busy:In verwerking ,wacht aub...
 label_loading:Opladen...
 label_unconnected:Geen printer gekoppeld!
+label_listening:TFT in Listening Mode!
 label_info:Info
 label_invalid_value:Geen correcte waarde/s voorzien!
 label_timeout_reached:Time-out bereikt!
@@ -219,6 +220,8 @@ label_feature_settings:Kenmerk
 label_connection_settings:Connecties
 label_serial_ports:S. Ports
 label_baudrate:Baudsnelheid
+label_listening_enable:Listen: on
+label_listening_disable:Normal: on
 label_eeprom_settings:EEPROM
 label_rgb_settings:LED Kleur
 label_rgb_off:LED Uit
