--- a/Copy to SD Card root directory to update/Language Packs/language_ru.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_ru.ini
@@ -128,6 +128,7 @@ label_ready:Готов
 label_busy:В процессе, ждите...
 label_loading:Загрузка...
 label_unconnected:Нет подключения!
+label_listening:TFT in Listening Mode!
 label_info:Информация
 label_invalid_value:Остутствуют правильные значения!
 label_timeout_reached:Время истекло!
@@ -219,6 +220,8 @@ label_feature_settings:Опции
 label_connection_settings:Соединение
 label_serial_ports:S. Ports
 label_baudrate:Скорость
+label_listening_enable:Listen: on
+label_listening_disable:Normal: on
 label_eeprom_settings:EEPROM
 label_rgb_settings:Цвет LED
 label_rgb_off:LED выкл
