--- a/Copy to SD Card root directory to update/Language Packs/language_sk.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_sk.ini
@@ -128,6 +128,7 @@ label_ready:Pripravená
 label_busy:Počkajte prosím...
 label_loading:Načítavam...
 label_unconnected:Tlačiareň odpojená!
+label_listening:TFT in Listening Mode!
 label_info:Info
 label_invalid_value:Invalid value(s)
 label_timeout_reached:Timeout reached!
@@ -219,6 +220,8 @@ label_feature_settings:Funkcie
 label_connection_settings:Connection
 label_serial_ports:S. Ports
 label_baudrate:BaudRate
+label_listening_enable:Listen: on
+label_listening_disable:Normal: on
 label_eeprom_settings:EEPROM
 label_rgb_settings:Farba LED
 label_rgb_off:Vypnúť LED
