--- a/Copy to SD Card root directory to update/Language Packs/language_sl.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_sl.ini
@@ -128,6 +128,7 @@ label_ready:Pripravljen
 label_busy:Zaseden s procesiranjem, prosim počakaj...
 label_loading:Nalagam...
 label_unconnected:Nobenega tiskalnika priključenega!
+label_listening:TFT in Listening Mode!
 label_info:Info
 label_invalid_value:Invalid value(s)
 label_timeout_reached:Timeout reached!
@@ -219,6 +220,8 @@ label_feature_settings:Funkcije
 label_connection_settings:Connection
 label_serial_ports:S. Ports
 label_baudrate:Baud hitr.
+label_listening_enable:Listen: on
+label_listening_disable:Normal: on
 label_eeprom_settings:EEPROM
 label_rgb_settings:Barva LED
 label_rgb_off:LED Off
