--- a/Copy to SD Card root directory to update/Language Packs/language_tc.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_tc.ini
@@ -128,6 +128,7 @@ label_ready:已準備好
 label_busy:系統繁忙請稍等
 label_loading:讀取中
 label_unconnected:尚未連線到主機板
+label_listening:TFT in Listening Mode!
 label_info:提示
 label_invalid_value:沒有有效的條件!
 label_timeout_reached:已超時!
@@ -219,6 +220,8 @@ label_feature_settings:功能設定
 label_connection_settings:连接
 label_serial_ports:S. Ports
 label_baudrate:串列傳輸速率
+label_listening_enable:Listen: on
+label_listening_disable:Normal: on
 label_eeprom_settings:EEPROM
 label_rgb_settings:燈光顏色
 label_rgb_off:關閉燈光
