--- a/Copy to SD Card root directory to update/Language Packs/language_tr.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_tr.ini
@@ -128,6 +128,7 @@ label_ready:Hazır
 label_busy:İşlem sürüyor, bekleyiniz...
 label_loading:Yükleniyor...
 label_unconnected:Yazıcı bağlı değil!
+label_listening:TFT in Listening Mode!
 label_info:Bilgi
 label_invalid_value:Geçersiz değer(ler)
 label_timeout_reached:Zaman aşımı!
@@ -219,6 +220,8 @@ label_feature_settings:Özellik
 label_connection_settings:Bağlantı
 label_serial_ports:S. Ports
 label_baudrate:BaudRate
+label_listening_enable:Listen: on
+label_listening_disable:Normal: on
 label_eeprom_settings:EEPROM
 label_rgb_settings:LED Rengi
 label_rgb_off:LED'i Kapat
