--- a/Copy to SD Card root directory to update/Language Packs/language_uk.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_uk.ini
@@ -128,6 +128,7 @@ label_ready:Готовий
 label_busy:Опрацювання, зачекайте ...
 label_loading:Завантаження ...
 label_unconnected:Принтер не підключено!
+label_listening:TFT in Listening Mode!
 label_info:Інформація
 label_invalid_value:Неправильне значення!
 label_timeout_reached:Час вичерпано!
@@ -219,6 +220,8 @@ label_feature_settings:Опції
 label_connection_settings:З'єднання
 label_serial_ports:S. Ports
 label_baudrate:Baudrate
+label_listening_enable:Listen: on
+label_listening_disable:Normal: on
 label_eeprom_settings:EEPROM
 label_rgb_settings:Колір LED
 label_rgb_off:LED вимкн.
