--- a/Copy to SD Card - MKS/config.ini
+++ b/Copy to SD Card - MKS/config.ini
@@ -272,6 +272,15 @@ prog_disp_type:2
 #     also shown, it can be done by introducing a comment at the
 #     beginning of the gCode file in the format "; Layer count: xx".
 #     Separators can be " ", ":", "_" or "=".
+#   - If the total number of layers exceeds 999, this information
+#     will not be displayed because there's no room for both current
+#     and total layer number to be shown.
+#
+#    For PrusaSlicer users, if the layer number/count display
+# feature is wanted, some comment lines must be added in 
+# Printer Settings -> Custom G-code section such as:
+#    - ";LAYER:[layer_num]" in "After layer change G-code"
+#    - ";LAYER_COUNT:[total_layer_count]" in "Start G-code"
 #
 #   Options: [Layer height: 0, Layer number: 1, Both - height & number: 2]
 layer_disp_type:0
@@ -824,16 +833,16 @@ end_gcode_enabled:0
 cancel_gcode_enabled:1
 
 #### Start Gcode
-# This gcode will runs before starting a print if "start_gcode_enabled" is enabled.
+# This gcode will run before starting a print if "start_gcode_enabled" is enabled.
 #   Value range: [min: 3, max: 75 characters]
 start_gcode:G28 XY R20\n
 
 #### End Gcode
-# This gcode will runs after a print is completed if "end_gcode_enabled" is enabled.
+# This gcode will run after a print is completed if "end_gcode_enabled" is enabled.
 #   Value range: [min: 3, max: 75 characters]
 end_gcode:M104 S0\nM140 S0\nM107\nM18\n
 
 #### Cancel Gcode
-# This gcode will runs when a print is canceled if "cancel_gcode_enabled" is enabled.
+# This gcode will run when a print is canceled if "cancel_gcode_enabled" is enabled.
 #   Value range: [min: 3, max: 75 characters]
 cancel_gcode:M104 S0\nM140 S0\nG28 XY R10\nM107\nM18\n
