--- a/Copy to SD Card root directory to update/config.ini
+++ b/Copy to SD Card root directory to update/config.ini
@@ -113,6 +113,14 @@ emulated_m600:1
 #   Options: [disable: 0, enable: 1]
 emulated_m109_m190:1
 
+#### G-code File Comment Parsing
+# The TFT parses and processes extra information provided by the slicer as comments in the G-code file.
+#
+# NOTE: Enable it in case the slicer (e.g. Cura) supports extra information.
+#
+#   Options: [disable: 0, enable: 1]
+file_comment_parsing:1
+
 
 #--------------------------------------------------------------------
 # UI Settings
@@ -279,6 +287,7 @@ prog_disp_type:2
 #
 #   Options: [Layer height: 0, Layer number: 1, Both - height & number: 2]
 layer_disp_type:0
+
 
 #--------------------------------------------------------------------
 # Marlin Mode Settings (only for TFT24 V1.1 & TFT28/TFT35/TFT43/TFT50/TFT70 V3.0)
