--- a/Copy to SD Card root directory to update/Language Packs/language_it.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_it.ini
@@ -129,7 +129,7 @@ label_ready:Pronta
 label_busy:Stampante occupata, attendere...
 label_loading:Caricamento...
 label_unconnected:Stampante non connessa
-label_listening:TFT in Listening Mode!
+label_listening:TFT in Modalità Ascolto!
 label_info:Info
 label_invalid_value:Valori forniti non validi!
 label_timeout_reached:Timeout raggiunto!
@@ -219,7 +219,7 @@ label_machine_settings:Stampante
 label_parameter_settings:Parametri
 label_feature_settings:Configura
 label_connection_settings:Connessioni
-label_serial_ports:S. Ports
+label_serial_ports:Porte S.
 label_baudrate:Baudrate
 label_eeprom_settings:EEPROM
 label_rgb_settings:LED RGB
@@ -319,12 +319,12 @@ label_no_filament_stats:\nNessuna statistica del filamento.
 label_click_for_more:Clicca per riepilogo
 label_ext_templow:La temperatura dell'hotend è al di sotto della temperatura minima (%d℃).
 label_heat_hotend:Scaldo l'hotend a %d℃?
-label_desired_templow:Hotend temperature is below\ndesired temperature (%d℃).
-label_wait_heat_up:Wait for it to heat up.
+label_desired_templow:La temperatura dell'hotend è al di sotto della temperatura desiderata (%d℃).
+label_wait_heat_up:Attendi fine riscaldamento.
 label_z_align:Allinea Z
 label_macros:Macro
 label_mesh_valid:Validazione mesh
-label_connect_probe:Connect probe before starting the process. Make sure to disconnect it afterwards.
-label_disconnect_probe:Make sure you have disconnected probe before using this feature.
+label_connect_probe:Connetti la probe prima di iniziare il processo. Assicurati che dopo sia disconnessa.
+label_disconnect_probe:Assicurati che la probe sia disconnessa prima di usare questa funzionalità.
 label_calibration:Calibra
 
