--- a/Copy to SD Card root directory to update/Language Packs/language_it.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_it.ini
@@ -233,7 +233,7 @@ label_point_4:Punto 4
 label_point_5:Punto 5
 label_bed_leveling:ABL
 label_bl_complete:Auto livellamento completato
-label_bl_smart_fill:Punti di rilevazione mancanti mesh ricostruita con funzione smart.\n\nNota: ricordati di salvare!
+label_bl_smart_fill:Alcuni punti di rilevazione mancanti. Mesh ricostruita con funzione smart.\n\nNota: ricordati di salvare!
 label_bl_enable:ABL: on
 label_bl_disable:ABL: off
 label_abl:ABL
@@ -250,7 +250,7 @@ label_abl_slot0:Slot 0
 label_abl_slot1:Slot 1
 label_abl_slot2:Slot 2
 label_abl_slot3:Slot 3
-label_abl_slot_eeprom:Ricordo lo slot per il prossimo riavvio? (Salva in EEPROM)
+label_abl_slot_eeprom:Ricordare lo slot al prossimo riavvio? (Salva in EEPROM)
 label_abl_z:Z fade
 label_level_corner:L corner
 label_p_offset:P offset
@@ -324,7 +324,7 @@ label_wait_heat_up:Attendi fine riscaldamento.
 label_z_align:Allinea Z
 label_macros:Macro
 label_mesh_valid:Validazione mesh
-label_connect_probe:Connetti la probe prima di iniziare il processo. Assicurati che dopo sia disconnessa.
+label_connect_probe:Connetti la probe prima di iniziare il processo. Disconnettila quando finito.
 label_disconnect_probe:Assicurati che la probe sia disconnessa prima di usare questa funzionalità.
 label_calibration:Calibra
 
