--- a/Copy to SD Card root directory to update/config_rrf.ini
+++ b/Copy to SD Card root directory to update/config_rrf.ini
@@ -268,6 +268,7 @@ prog_disp_type:2
 # pressing the nozzle icon. At each click it will alter between the 3 variants.
 #
 # NOTES:
+#   - It requires "file_comment_parsing" is enabled.
 #   - This feature uses the layer number comments added by slicers at the starting of each layer.
 #   - Some slicers may not include the total number of layers in the G-code file. In this case only
 #     the current layer will be displayed. To display total number of layers, a comment should be
