--- a/Copy to SD Card root directory to update/Language Packs/language_tc.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_tc.ini
@@ -6,6 +6,7 @@
 label_emulated_m600:Emulated M600
 label_emulated_m109_m190:Emulated M109 / M190
 label_file_comment_parsing:File comment parsing
+label_event_led:Event LED
 label_rotated_ui:顯示方向
 label_language:正體中文
 label_ack_notification:ACK 弹窗类型
