--- a/Copy to SD Card root directory to update/Language Packs/language_cz.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_cz.ini
@@ -6,6 +6,7 @@
 label_emulated_m600:Emulace M600
 label_emulated_m109_m190:Emulace M109 / M190
 label_file_comment_parsing:Analýzovat komentáře
+label_event_led:Event LED
 label_rotated_ui:Otočit UI
 label_language:Čeština
 label_ack_notification:Styl oznámení ACK
