--- a/Copy to SD Card root directory to update/Language Packs/language_it.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_it.ini
@@ -6,6 +6,7 @@
 label_emulated_m600:M600 emulato
 label_emulated_m109_m190:M109 / M190 emulati
 label_file_comment_parsing:Analisi commenti su file
+label_event_led:Event LED
 label_rotated_ui:Ruota
 label_language:Italiano
 label_ack_notification:Tipo di popup
