--- a/Copy to SD Card root directory to update/Language Packs/language_pl.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_pl.ini
@@ -6,6 +6,7 @@
 label_emulated_m600:Emulowane M600
 label_emulated_m109_m190:Emulowane M109 / M190
 label_file_comment_parsing:File comment parsing
+label_event_led:Event LED
 label_rotated_ui:Obrót
 label_language:Polski
 label_ack_notification:Styl powiadom. ACK
