--- a/Copy to SD Card root directory to update/Language Packs/language_sl.ini
+++ b/Copy to SD Card root directory to update/Language Packs/language_sl.ini
@@ -6,6 +6,7 @@
 label_emulated_m600:Emulated M600
 label_emulated_m109_m190:Emulated M109 / M190
 label_file_comment_parsing:File comment parsing
+label_event_led:Event LED
 label_rotated_ui:Obrni UI
 label_language:Slovenski
 label_ack_notification:ACK notification style
