--- a/platformio.ini
+++ b/platformio.ini
@@ -22,6 +22,7 @@
 ;BIGTREE_TFT28_V1_0
 ;BIGTREE_TFT28_V3_0
 ;BIGTREE_TFT24_V1_1
+;BIGTREE_TFT24_V1_1_P
 ;BIGTREE_GD_TFT24_V1_1
 ;MKS_TFT32_V1_3
 ;MKS_TFT32_V1_4
@@ -34,11 +35,13 @@
 src_dir      = TFT
 boards_dir   = buildroot/boards
 ;Build only Target - BIGTREE_TFT35_V3_0
-default_envs = MKS_TFT28_V1_0_ARTILLERY
+;default_envs = MKS_TFT28_V1_0_ARTILLERY
 ;default_envs = BIGTREE_TFT35_V3_0
+;default_envs = BIGTREE_TFT35_E3_V3_0
+default_envs = BIGTREE_TFT24_V1_1_P
 
 ;Build all Targets
-;default_envs = BIGTREE_TFT35_V1_0, BIGTREE_TFT35_V1_1, BIGTREE_TFT35_V1_2, BIGTREE_TFT35_V2_0, BIGTREE_GD_TFT35_V2_0, BIGTREE_TFT35_V3_0, BIGTREE_TFT35_E3_V3_0, BIGTREE_TFT35_B1_V3_0, BIGTREE_TFT43_V3_0, BIGTREE_TFT50_V3_0, BIGTREE_TFT70_V3_0, BIGTREE_TFT28_V1_0, BIGTREE_TFT28_V3_0, BIGTREE_TFT24_V1_1, BIGTREE_GD_TFT24_V1_1, MKS_TFT32_V1_3, MKS_TFT32_V1_4, MKS_TFT32_V1_4_NOBL, MKS_TFT28_V3_0, MKS_TFT28_V4_0, MKS_TFT28_NEW_GENIUS
+;default_envs = BIGTREE_TFT35_V1_0, BIGTREE_TFT35_V1_1, BIGTREE_TFT35_V1_2, BIGTREE_TFT35_V2_0, BIGTREE_GD_TFT35_V2_0, BIGTREE_TFT35_V3_0, BIGTREE_TFT35_E3_V3_0, BIGTREE_TFT35_B1_V3_0, BIGTREE_TFT43_V3_0, BIGTREE_TFT50_V3_0, BIGTREE_TFT70_V3_0, BIGTREE_TFT28_V1_0, BIGTREE_TFT28_V3_0, BIGTREE_TFT24_V1_1, BIGTREE_TFT24_V1_1_P, BIGTREE_GD_TFT24_V1_1, MKS_TFT32_V1_3, MKS_TFT32_V1_4, MKS_TFT32_V1_4_NOBL, MKS_TFT28_V3_0, MKS_TFT28_V4_0, MKS_TFT28_NEW_GENIUS
 
 [common]
 default_src_filter = +<src/*> -<src/Libraries> -<src/User/Hal/stm32f10x> -<src/User/Hal/stm32f2_f4xx> ${json.default_src_filter}
@@ -334,6 +337,21 @@ build_flags   = ${stm32f10x.build_flags}
   -DHARDWARE="BIGTREE_TFT24_V1.1"
   -DHARDWARE_SHORT="B24V11"
   -DTFT24_V1_1=
+
+#
+# BIGTREE TFT24 V1.1 Portrait Mode
+#
+[env:BIGTREE_TFT24_V1_1_P]
+extends       = env:BIGTREE_TFT24_V1_1
+build_flags   = ${stm32f10x.build_flags}
+  -DSTM32F10X_CL=
+  -DHSE_VALUE=8000000ul
+  -DVECT_TAB_FLASH=0x08006000
+  -DRAM_SIZE=64  ; Available RAM size in kbytes
+  -DHARDWARE="BIGTREE_TFT24_V1.1_P"
+  -DHARDWARE_SHORT="B24V11"
+  -DTFT24_V1_1=
+  -DPORTRAIT=  ; Global variable to query if Portrait Mode is used
 
 #
 # BIGTREE TFT24 V1.1
